[gd_scene load_steps=2 format=3 uid="uid://cy2v8xp3mq1nt"]

[ext_resource type="Script" path="res://scenes/ui/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="XPBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
max_value = 10.0
value = 0.0
show_percentage = false

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "Lv.1"

[node name="Spacer3" type="Control" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "00:00"

[node name="MiddleSpacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BottomBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="KillsLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
text = "Kills: 0"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GoldLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
text = "Gold: 0"
